@@ -8,3 +8,8 @@ EXTRA_DIST = gnucash-docs.spec \
 	     stylesheet \
 	     xsl \
 	     HACKING
+
+DISTCHECK_CONFIGURE_FLAGS = --disable-scrollkeeper
+
+distuninstallcheck_listfiles =  \
+find -regex '.*/var/scrollkeeper/.*' -prune -or -type f -print
