@@ -1,3 +1,14 @@
+2006-06-04  Chris Lyttle  <chris@wilddev.net>
+	
+	* xmldocs.make: fixups to make distcheck work
+	* configure.in: add --disable-scrollkeeper switch
+	* help/de_DE/Makefile.am: add DISTCLEANFILES
+	* help/C/Makefile.am: add DISTCLEANFILES
+	* guide/de_DE/Makefile.am: add DISTCLEANFILES
+	* guide/C/Makefile.am: add DISTCLEANFILES
+	* omf.make: make scrollkeeper run conditional
+	* Makefile.am: add --disable-scrollkeeper switch
+
 2006-05-28  Chris Lyttle  <chris@wilddev.net>
 
 	* xmldocs.make: fix uninstall. note that distcheck fails still 
